Fixed home page typo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>THis is my page live on the web!!!!!</h1>
+    <h1>This is my page live on the web!!!!!</h1>
   </body>
 </html>
